added permission type functionality and initial dashboard
